# vocabulary_trainer

./: CMakeLists.txt
include/: vocabulary.hpp
src/: main.cpp  vocabulary.cpp
